[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "timestamptool"
version = "0.0.1761031508"
description = "Generate seconds timestamps"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/timestamptool"

[project.scripts]
timestamptool = "timestamptool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
timestamptool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = []
dependencies-git = ["asserttool @ git+https://github.com/jakeogh/asserttool", "clicktool @ git+https://github.com/jakeogh/clicktool", "globalverbose @ git+https://github.com/jakeogh/globalverbose", "mptool @ git+https://github.com/jakeogh/mptool"]
index-urls = ["jakeogh.github.io", "pip-index"]
